2005-10-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* binutils-all/windres/escapex-2.rc: New file.
	* binutils-all/windres/escapex-2.rsd: Generate.

2005-08-26  Christian Groessler  <chris@groessler.org>

	* binutils-all/objcopy.exp: Don't setup_xfail "z8*-*".

2005-08-18  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/objcopy.exp: Remove a29k support.
	* binutils-all/objdump.exp: Likewise, alliant and convex too.

2005-05-07  Nick Clifton  <nickc@redhat.com>

	* Update the address and phone number of the FSF organization in
	the GPL notices in the following files:
	binutils-all/ar.exp, binutils-all/dlltool.exp,
	binutils-all/nm.exp, binutils-all/objcopy.exp,
	binutils-all/objdump.exp, binutils-all/readelf.exp,
	binutils-all/size.exp, binutils-all/hppa/objdump.exp,
	binutils-all/m68k/objdump.exp, binutils-all/vax/objdump.exp,
	binutils-all/windres/msupdate, binutils-all/windres/windres.exp,
	config/default.exp, lib/utils-lib.exp

2005-04-04  Jan-Benedict Glaw  <jbglaw@lug-owl.>

	* binutils-all/vax/objdump.exp: Condense the two tests into one
	and add a "-M entry:" for the second label.

2005-03-29  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* binutils-all/vax: New directory.
	* binutils-all/vax/objdump.exp: New script.  Test the -Mentry:
	switch added to the VAX disassembler.
	* binutils-all/vax/entrymask.s: New assembler source file.

2005-03-08  Ben Elliston  <bje@au.ibm.com>

       * config/default.exp: Remove send_user call for stray output.

2005-01-04  Martin Koegler  <mkoegler@auto.tuwien.ac.at>

	* binutils-all/testprog.c: Add prototype for printf() and make
	type of "string" array be "char" in order to avoid compile time
	warnings.

2004-12-31  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/readelf.ss: Allow for both .rel and .rela sections.

2004-11-04  Hans-Peter Nilsson  <hp@axis.com>

	* binutils-all/objdump.exp (cpus_expected): Append cris.

2004-10-28  H.J. Lu  <hongjiu.lu@intel.com>
